Changed cronjobs to night for efficincy